--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "pdfjs-dist": "^3.6.172",
     "vue": "^3.2.47",
+    "vue-float-action-button": "^0.7.9",
+    "vue-float-menu": "^1.9.1",
     "vue-pdf": "^4.3.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.1",
     "vite": "^4.3.4"
-  }
+  },
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
